fixed sticky nav to prevent header jump

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -21,6 +21,7 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 0;
+	// transition: top 0.6s;
 	p {
 		font-size: clamp(1.6rem, 1.6vw, 2rem);
 	}
@@ -51,17 +52,21 @@ nav {
 	background: transparent;
 }
 
-.show.menu {
-	display: block;
-}
+// .show.menu {
+// 	display: block;
+// }
 
 .sticky {
 	position: fixed;
 	top: 0;
-	z-index: 10;
+	z-index: 999;
 	width: 100%;
 	background-color: $white;
 	box-shadow: 0px 0px 2px $darkBlue;
+}
+
+.sticky + .headerTextContainer {
+	margin-top: 60px;
 }
 
 .menu {
@@ -118,6 +123,7 @@ nav {
 .scrollChevron {
 	text-align: center;
 	font-size: 4rem;
+	--animate-duration: 3s;
 	// padding-bottom: 30px;
 	// justify-self: center;
 }
